# ExecutionEngine

./: README.md  pyproject.toml
docs/: architecture.md
src/execution_engine/: __init__.py  example.py  models.py  planner.py  today_view.py
tests/: test_planner.py  test_today_view.py
